--- a/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
+++ b/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
@@ -25,15 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Inventory" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Inventory" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Admin
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Warehouse" asp-action="Index">Warehouse</a>
                                 <a class="dropdown-item" href="#">Another action</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
@@ -51,7 +49,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-white-50">
+    <footer class="border-top footer bg-dark text-white">
         <div class="container">
             &copy; 2022 - System Inventory - <a asp-area="Inventory" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
