CRUD Brand: controller, model, migration, views

--- a/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
+++ b/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Warehouse" asp-action="Index">Warehouse</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Brand" asp-action="Index">Brand</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
