CRUD Product: controller, model, migration, views

--- a/SystemInventoryWebNet5/wwwroot/css/site.css
+++ b/SystemInventoryWebNet5/wwwroot/css/site.css
@@ -15,6 +15,7 @@
     }
 .btn {
     padding: 0.25rem 0.75rem;
+    border-radius: 16px;
 }
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
