--- a/SystemInventoryWebNet5/Areas/Inventory/Views/Home/Index.cshtml
+++ b/SystemInventoryWebNet5/Areas/Inventory/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<SystemInventory.Models.Product>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row pb-3">
+    @foreach (var product in Model)
+   {
+       <div class="col-lg-3 col-md-6">
+           <div class="row p-2">
+               <div class="col-12 p-1" style="border: 1px solid #666; border-radius: 7px;">
+                   <div class="card" style="border: 0px;">
+                       <img src="@product.ImageUrl" class="card-img-top rounded" style="max-height: 250px;" />
+                       <div class="pl-1">
+                           <p class="card-title h5"><b style="color:#2c3e50">@product.Description</b></p>
+                       </div>
+                       <div style="padding-left: 5px">
+                           <p>Price <strong>$ @product.Price.ToString()</strong></p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+   }
 </div>
