Inventory COntroler, js, and view

--- a/SystemInventoryWebNet5/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SystemInventoryWebNet5/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RegisterModel
+@model SistemaInventario.Areas.Identity.Pages.Account.RegisterModel
 @using SystemInventory.Utils
 @{
     ViewData["Title"] = "Register";
