company crud - company model, controller, repository

--- a/SystemInventoryWebNet5/Areas/Inventory/Views/Inventory/Index.cshtml
+++ b/SystemInventoryWebNet5/Areas/Inventory/Views/Inventory/Index.cshtml
@@ -29,6 +29,10 @@
     </table>
 </div>
 
+<div class="col-6 p-2">
+    <a class="btn btn-success" asp-action="History"> <i class="fas fa-calendar-week"></i> History </a>
+</div>
+
 @section Scripts{ 
     <script src="~/js/Inventory.js"></script>
 }
