--- a/SystemInventoryWebNet5/wwwroot/css/site.css
+++ b/SystemInventoryWebNet5/wwwroot/css/site.css
@@ -51,6 +51,7 @@ border-color: #1861ac;
 -------------------------------------------------- */
 html {
     font-size: 14px;
+    font-family: monospace !important;
 }
 
 @media (min-width: 768px) {
