--- a/SystemInventoryWebNet5/Areas/Admin/Views/Questions/Index.cshtml
+++ b/SystemInventoryWebNet5/Areas/Admin/Views/Questions/Index.cshtml
@@ -19,6 +19,7 @@
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
+                <th>Id</th>
                 <th>Question</th>
                 <th>Category</th>
                 <th></th>
@@ -27,6 +28,9 @@
     <tbody>
         @foreach (var item in Model) {
         <tr>
+            <td>
+                @item.Id
+            </td>
             <td>
                 @item.Title.Trim()
             </td>
