--- a/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
+++ b/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
@@ -4,9 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    @*<meta name="referrer" content="strict-origin" />*@
-    @*<meta name="referrer" content="no-referrer-when-downgrade">*@
-    @*<meta name="referrer" content="origin">*@
     <title>@ViewData["Title"] - SystemInventoryWebNet5</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -28,6 +25,15 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Inventory" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                                Questions
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Questions" asp-action="Index">Questions</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Questions" asp-action="List">List</a>
+                            </div>
                         </li>
 
                         @if (User.IsInRole(DS.RoleAdmin) || User.IsInRole(DS.RoleInventory))
