session managment. add product to car

--- a/SystemInventoryWebNet5/wwwroot/css/site.css
+++ b/SystemInventoryWebNet5/wwwroot/css/site.css
@@ -1,6 +1,12 @@
 ﻿/*label, .dataTables_info, .previous, .next {
     color: antiquewhite;
 }*/
+
+.navbar-nav .nav-link {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 .navbar {
     padding-top: 0;
     padding-bottom: 0;
