--- a/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
+++ b/SystemInventoryWebNet5/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿@using SystemInventory.Utils
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,9 +26,9 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" asp-area="Inventory" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                                 Questions
@@ -78,6 +81,28 @@
                                 </div>
                             </li>
                         }
+
+                        @if (HttpContextAccessor.HttpContext.Session.GetInt32(DS.ssShoppingCar)!=null)
+                        {
+                            <li style="color:white;">
+                                <a asp-area="Inventory" asp-controller="Car" asp-action="Index" class="nav-link">
+                                    @{ 
+                                        var productNumber = HttpContextAccessor.HttpContext.Session.GetInt32(DS.ssShoppingCar);
+                                    }
+                                    <i class="fas fa-shopping-cart"></i> &nbsp; (@productNumber)
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="#" class="nav-link">
+                                    <i class="fas fa-shopping-cart"></i> &nbsp; (0)
+                                </a>
+                            </li>
+
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
